<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="?attr/actionBarSize"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/home_button_cari_indikator"
                    style="@style/AppTheme.Button"
                    android:text="@string/home_menu_cari_indikator"
                    app:backgroundTint="@color/bp2Accent"
                    android:textColor="@color/bp2SecondaryText"
                    android:drawableTop="@drawable/ic_search_primary_48dp"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/home_button_cari_dokumen"
                    style="@style/AppTheme.Button"
                    android:text="@string/home_menu_cari_dokumen"
                    app:backgroundTint="@color/bp2PrimaryLight"
                    android:textColor="@color/bp2SecondaryText"
                    android:drawableTop="@drawable/ic_library_books_black_24dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/home_button_pengetahuan_dasar"
                    style="@style/AppTheme.Button"
                    android:text="@string/home_menu_pengetahuan_dasar"
                    app:backgroundTint="@color/bp2PrimaryLight"
                    android:textColor="@color/bp2SecondaryText"
                    android:drawableTop="@drawable/ic_school_black_24dp"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/home_button_catatan"
                    style="@style/AppTheme.Button"
                    android:text="@string/home_menu_catatan"
                    app:backgroundTint="@color/bp2PrimaryLight"
                    android:textColor="@color/bp2SecondaryText"
                    android:drawableTop="@drawable/ic_mode_edit_black_24dp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/home_button_permintaan_data"
                    style="@style/AppTheme.Button"
                    android:text="@string/home_menu_permintaan_data"
                    app:backgroundTint="@color/bp2PrimaryLight"
                    android:textColor="@color/bp2SecondaryText"
                    android:drawableTop="@drawable/ic_queue_black_24dp"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/home_button_fasumsosgo"
                    style="@style/AppTheme.Button"
                    android:text="@string/home_menu_fasumsosgo"
                    app:backgroundTint="@color/bp2PrimaryLight"
                    android:textColor="@color/bp2SecondaryText"
                    android:drawableTop="@drawable/ic_my_location_black_24dp"/>


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="00dp">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/home_button_survei_km0propoor"
                    style="@style/AppTheme.Button"
                    android:text="@string/home_menu_survei_propoor"
                    app:backgroundTint="@color/bp2PrimaryLight"
                    android:textColor="@color/bp2SecondaryText"
                    android:drawableTop="@drawable/ic_location_on_black_24dp"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/home_button_contoh_format"
                    style="@style/AppTheme.Button"
                    android:text="@string/home_menu_template"
                    app:backgroundTint="@color/bp2PrimaryLight"
                    android:textColor="@color/bp2SecondaryText"
                    android:drawableTop="@drawable/ic_format_shapes_black_24dp"/>
            </LinearLayout>

        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/smooth_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <android.support.v7.widget.Toolbar
            android:id="@+id/home_toolbar"
            style="@style/AppTheme.Toolbar"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="BUKU SAKU "
                        android:textStyle="bold"
                        android:textColor="@color/bp2Icons">
                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="BANGUNSATENDA"
                        android:textStyle="bold"
                        android:textColor="@color/bp2Accent">
                    </TextView>
                </android.support.v7.widget.LinearLayoutCompat>

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>


<!--

    ?attr/              http://stackoverflow.com/questions/4771844/whats-the-difference-between-android-and-android-in-an-android-layout-x
    attr suggestions    CTRL + SPACE

-->